--- a/Angular/src/app/shopping-list/shopping-list.component.html
+++ b/Angular/src/app/shopping-list/shopping-list.component.html
@@ -1,11 +1,20 @@
-
-<p>shopping-list works!</p>
-
-<mat-selection-list #shoes>
-  <mat-list-option *ngFor="let shoe of typesOfShoes">
-    {{shoe}}
-  </mat-list-option>
-</mat-selection-list>
-
-
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-sm-2"></div>
+    <div class="col-md-4 col-sm-8 lis">
+      <h3>Shopping List</h3>
+      von {{name}}, {{vorname}}
+    </div>
+    <div class="col-md-4 col-sm-1"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-sm-2"></div>
+    <div class="col-md-4 col-sm-8">
+      <mat-list #shoes>
+        <mat-list-item (click)="openDialog(shoe)" *ngFor="let shoe of typesOfShoes">
+          <button mat-button>{{shoe}}</button>
+        </mat-list-item>
+      </mat-list>
+    </div>
+  </div>
+</div>
