--- a/Angular/src/app/dialog/dialog.component.html
+++ b/Angular/src/app/dialog/dialog.component.html
@@ -1,6 +1,29 @@
-<p>dialog works!</p>
-<h1 mat-dialog-title>Scan product</h1>
-<div mat-dialog-content>
-
+<div class="dialog">
+  <h1 mat-dialog-title>Scan product</h1>
+  <div mat-dialog-content>
+   <p>Shopping item: {{data.shoeName}}</p>
+   <script>
+      const Quagga = require('quagga').default;
+      Quagga.init({
+        inputStream : {
+            name : "Live",
+            type : "LiveStream",
+            // Or '#yourElement' (optional)
+            target: document.querySelector('#yourElement')
+        },
+        decoder : {
+            readers : ["code_128_reader"]
+        }
+      }, function(err) {
+        if (err) {
+            console.log(err);
+            return
+        }
+        console.log("Initialization finished. Ready to start");
+        Quagga.start();
+      });
+   </script>
+  </div>
 </div>
+
 
